--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
                     instructionButton.style.display = 'block';
                     instructionButton.addEventListener('click', () => {
                         // Показываем инструкцию по установке
-                        alert('Инструкция по установке:...'); // замените на свою инструкцию
+                        openModal(); // замените на свою инструкцию
                     });
                 }
             }
@@ -403,7 +403,7 @@
                 instructionButton.style.display = 'block';
                 instructionButton.addEventListener('click', () => {
                     // Показываем инструкцию по установке
-                    alert('Инструкция по установке:...'); // замените на свою инструкцию
+                    openModal(); // замените на свою инструкцию
                 });
             }
         }
