--- a/index.html
+++ b/index.html
@@ -304,104 +304,49 @@
 
         if (isMobileDevice()) {
             /*Работает на Chrome, Microsoft Edge (версия 76 и выше) */
-            // window.addEventListener('beforeinstallprompt', (e) => {
-            //     e.preventDefault();
-            //     // Показываем кнопку установки только если условия для установки PWA выполнены
-            //     installButton.style.display = 'block';
-            //     installEvent = e;
-            // });
-
-
-            // installButton.addEventListener('click', () => {
-            //     // Запускаем установку приложения
-            //     if (installEvent) {
-            //         installEvent.prompt().then((result) => {
-            //             if (result.outcome === 'accepted') {
-            //                 // Пользователь согласился на установку, скрываем кнопку
-            //                 installButton.style.display = 'none';
-            //                 // instructionButton.style.display = 'none';
-            //             } else if (result.outcome === 'dismissed') {
-            //                 // Пользователь отменил установку, оставляем кнопку активной
-            //                 // ничего не делаем, кнопка остается активной
-            //                 // installButton.style.display = 'block';
-            //             }
-            //         });
-            //     }
-            // })
-
-            // // function showInstallButton() {
-            // //     installButton.style.display = 'block';
-            // //     if (!installEvent) {
-            // //         instructionButton.style.display = 'block';
-            // //         instructionButton.addEventListener('click', () => {
-            // //             // Показываем инструкцию по установке
-            // //             openModal();
-            // //         });
-            // //     }
-            // // }
-
-            // if (!('beforeinstallprompt' in window)) {
-            //     // Если браузер не предлагает установку PWA, добавляем кнопку с инструкцией
-            //     instructionButton.style.display = 'block';
-            //     instructionButton.addEventListener('click', () => {
-            //         // Показываем инструкцию по установке
-            //         openModal();
-            //     })
-            // } else console.log('000');
-
-
-            // window.addEventListener('appinstalled', () => {
-            //     // Скрыть кнопки после установки PWA
-            //     installButton.style.display = 'none';
-            //     // instructionButton.style.display = 'none';
-            // });
-
-            // const standaloneMediaQuery = matchMedia('(display-mode: standalone)');
-            // if (standaloneMediaQuery.matches) {
-            //     // Скрыть кнопку, если приложение запущено в standalone-режиме
-            //     installButton.style.display = 'none';
-            // }
-
-
-
-            let deferredPrompt;
-
             window.addEventListener('beforeinstallprompt', (e) => {
                 e.preventDefault();
-                deferredPrompt = e;
+                // Показываем кнопку установки только если условия для установки PWA выполнены
                 installButton.style.display = 'block';
+                installEvent = e;
             });
 
+
             installButton.addEventListener('click', () => {
-                if (deferredPrompt) {
-                    deferredPrompt.prompt().then((result) => {
+                // Запускаем установку приложения
+                if (installEvent) {
+                    installEvent.prompt().then((result) => {
                         if (result.outcome === 'accepted') {
                             // Пользователь согласился на установку, скрываем кнопку
                             installButton.style.display = 'none';
-                            instructionButton.style.display = 'none';
+                            // instructionButton.style.display = 'none';
                         } else if (result.outcome === 'dismissed') {
                             // Пользователь отменил установку, оставляем кнопку активной
                             // ничего не делаем, кнопка остается активной
-                            // installButton.style.display = 'block';
                         }
                     });
                 }
+            })
+
+            if (!('beforeinstallprompt' in window)) {
+                // Если браузер не предлагает установку PWA, добавляем кнопку с инструкцией
+                instructionButton.style.display = 'block';
+                instructionButton.addEventListener('click', () => {
+                    // Показываем инструкцию по установке
+                    openModal();
+                })
+            } 
+
+            window.addEventListener('appinstalled', () => {
+                // Скрыть кнопки после установки PWA
+                installButton.style.display = 'none';
+                // instructionButton.style.display = 'none';
             });
 
-            console.log(navigator.standalone);
-            // Проверяем, установлен ли PWA
-            if (navigator.standalone || window.matchMedia('(display-mode: standalone)').matches) {
-                // PWA установлен, скрываем кнопку инструкции
-                instructionButton.style.display = 'none';
-            } else {
-                // PWA не установлен, отображаем кнопку инструкции
-                if (!deferredPrompt) {
-                    instructionButton.style.display = 'block';
-                    instructionButton.addEventListener('click', () => {
-                        // Показываем инструкцию по установке
-                        openModal(); // замените на свою инструкцию
-                    });
-                }
+            const standaloneMediaQuery = matchMedia('(display-mode: standalone)');
+            if (standaloneMediaQuery.matches) {
+                // Скрыть кнопку, если приложение запущено в standalone-режиме
+                installButton.style.display = 'none';
             }
         }
     </script>
