--- a/index.html
+++ b/index.html
@@ -348,6 +348,8 @@
                 // Скрыть кнопку, если приложение запущено в standalone-режиме
                 installButton.style.display = 'none';
             }
+
+            console.log(navigator);
         }
     </script>
 </body>
