--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <meta property="og:image:height" content="256">
 <meta property="og:title" content="PWA APP">
 <meta property="og:description" content="Testing PWA application">
-<link rel="manifest" href="manifest.json">
+<!-- <link rel="manifest" href="manifest.json"> -->
 <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
@@ -246,7 +246,6 @@
         iste quaerat tempore, fuga commodi, eum temporibus exercitationem delectus, minus et placeat eius nihil
         rerum!lorem5
     </div>
-
     <script>
 
         // if ('serviceWorker' in navigator) {
@@ -351,6 +350,7 @@
             console.log(navigator);
         }
     </script>
+    <script src="test.js"></script>
 </body>
 
 </html>
