--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
             console.log(navigator);
         }
     </script>
-    <script src="test.js"></script>
+    <script src="detect.js"></script>
 </body>
 
 </html>
