--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
         rerum!lorem5
     </div>
     <script type="module">
-        import Bowser from "/bowser/bowser.js";
+        import Bowser from "/btnUp/bowser/bowser.js";
         const browser = Bowser.getParser(window.navigator.userAgent);
         const browserName = browser.getBrowserName();
         console.log(browser);
