--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
         iste quaerat tempore, fuga commodi, eum temporibus exercitationem delectus, minus et placeat eius nihil
         rerum!lorem5
     </div>
-    <script>
+    <script type="module">
         // import Bowser from "/btnUp/bowser/bowser.js";
         // const browser = Bowser.getParser(window.navigator.userAgent);
         // const browserName = browser.getBrowserName();
